fix: overflow issue✅

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,18 +1,15 @@
-html {
-  font-size: 100%;
-  box-sizing: border-box;
-}
-
 *,
 ::before,
 ::after {
   box-sizing: inherit;
 }
 
+html,
 body {
   margin: 0;
   padding: 0;
   font-family: "Nunito", sans-serif;
+  height: 100%;
 }
 
 a {
